--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>blake</title>
-    <link rel="stylesheet" href="C:\Users\Kuku\Documents\atom stuff\udemy angela yu web dev\css\styles.css">
+    <link rel="stylesheet" href="\Users\Kuku\Documents\atom stuff\udemy angela yu web dev\css\styles.css">
     <!-- <link rel="icon" href="fevicon.ico"> -->
     <link rel="shortcut icon" href="images\fevicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,19 +12,19 @@
   </head>
   <body>
     <div class="main">
-      <img class="cloud_1" src="C:\Users\Kuku\Documents\atom stuff\udemy angela yu web dev\images\cloud.png" alt="cloud-png">
+      <img class="cloud_1" src="\Users\Kuku\Documents\atom stuff\udemy angela yu web dev\images\cloud.png" alt="cloud-png">
       <h1>I'm Blake</h1>
       <h2>
         a programmer
       </h2>
-      <img class="cloud_2" src="C:\Users\Kuku\Documents\atom stuff\udemy angela yu web dev\images\cloud.png" alt="cloud-png">
+      <img class="cloud_2" src="\Users\Kuku\Documents\atom stuff\udemy angela yu web dev\images\cloud.png" alt="cloud-png">
       <img src="C:\Users\Kuku\Documents\atom stuff\udemy angela yu web dev\images\mountain.png" alt="mountain-png">
     </div>
     <div class="middle-container">
 
 
   <div class="profile">
-    <img class="face_image" src="C:\Users\Kuku\Documents\atom stuff\udemy angela yu web dev\images\face-id.png" alt="">
+    <img class="face_image" src="\Users\Kuku\Documents\atom stuff\udemy angela yu web dev\images\face-id.png" alt="">
     <h2>Hello.</h2>
     <p>I'm a penetration tester and a freelancer who makes websites in free time.</p>
   </div>
@@ -33,13 +33,13 @@
   <div class="skills">
     <h2>My Skills.</h2>
     <div class="skill-row">
-      <img class="skillrow_image1" src="C:\Users\Kuku\Documents\atom stuff\udemy angela yu web dev\images\hacker.png" alt="">
+      <img class="skillrow_image1" src="\Users\Kuku\Documents\atom stuff\udemy angela yu web dev\images\hacker.png" alt="">
       <h3>Hacking & Critical problem analysis</h3>
       <p>I'm a born hacker.</p>
     </div>
 
     <div class="skill-row">
-      <img class="skillrow_image2" src="C:\Users\Kuku\Documents\atom stuff\udemy angela yu web dev\images\dog-biscuit.png" alt="">
+      <img class="skillrow_image2" src="\Users\Kuku\Documents\atom stuff\udemy angela yu web dev\images\dog-biscuit.png" alt="">
       <!-- <div class="text"> -->
         <h3>biscuit racer</h3>
         <p>Yes, this is a thing. You have to run 50 meters while keeping a biscuit on   your nose and I'm the undisputed champion since kindergarten.</p>
