--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>blake</title>
     <link rel="stylesheet" href="\styles.css">
     <!-- <link rel="icon" href="fevicon.ico"> -->
-    <link rel="shortcut icon" href="images\fevicon.ico">
+    <link rel="shortcut icon" href="\fevicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap" rel="stylesheet">
