--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         a programmer
       </h2>
       <img class="cloud_2" src="\cloud.png" alt="cloud-png">
-      <img src="C:\Users\Kuku\Documents\atom stuff\udemy angela yu web dev\images\mountain.png" alt="mountain-png">
+      <img src="mountain.png" alt="mountain-png">
     </div>
     <div class="middle-container">
 
